<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D7CCC8"
    tools:context="com.example.android.welcometohogwarts.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/begin" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/books3" />


            <EditText
                android:id="@+id/users_name_view"
                style="@style/EditText"
                android:layout_alignParentBottom="true"
                android:hint="@string/name" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/question_when"
                style="@style/Question.number"
                android:text="@string/one" />

            <TextView
                android:id="@+id/question1_body"
                style="@style/Question"
                android:layout_toEndOf="@id/question_when"
                android:layout_toRightOf="@id/question_when"
                android:text="@string/question1_body" />

            <EditText
                android:id="@+id/year"
                style="@style/EditText2"
                android:layout_below="@id/question1_body"
                android:hint="@string/year" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/question_common_room_id"
                style="@style/Question.number"
                android:text="@string/two" />

            <TextView
                android:id="@+id/question2_body"
                style="@style/Question"
                android:layout_toEndOf="@id/question_common_room_id"
                android:layout_toRightOf="@id/question_common_room_id"
                android:text="@string/question2_body" />

            <RadioGroup
                android:id="@+id/radio_group_common_room"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_common_room_id"
                android:layout_toEndOf="@id/question_common_room_id"
                android:layout_toRightOf="@id/question_common_room_id"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question2_false1"
                    style="@style/RadioButton3"
                    android:text="@string/question2_false1" />

                <RadioButton
                    android:id="@+id/question2_false2"
                    style="@style/RadioButton1"
                    android:text="@string/question2_false2" />

                <RadioButton
                    android:id="@+id/question2_answer"
                    style="@style/RadioButton1"
                    android:text="@string/question2_answer" />

                <RadioButton
                    android:id="@+id/question2_false3"
                    style="@style/RadioButton1"
                    android:text="@string/question2_false3" />

            </RadioGroup>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/question_emblematic"
                style="@style/Question.number"
                android:text="@string/three" />

            <TextView
                android:id="@+id/question3_body"
                style="@style/Question"
                android:layout_toEndOf="@id/question_emblematic"
                android:layout_toRightOf="@id/question_emblematic"
                android:text="@string/question3_body" />

            <RadioGroup
                android:id="@+id/radio_group_emblematic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_emblematic"
                android:layout_toEndOf="@id/question_emblematic"
                android:layout_toRightOf="@id/question_emblematic"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question3_false1"
                    style="@style/RadioButton2"
                    android:text="@string/question3_false1" />

                <RadioButton
                    android:id="@+id/question3_false2"
                    style="@style/RadioButton1"
                    android:text="@string/question3_false2" />

                <RadioButton
                    android:id="@+id/question3_false3"
                    style="@style/RadioButton1"
                    android:text="@string/question3_false3" />

                <RadioButton
                    android:id="@+id/question3_answer"
                    style="@style/RadioButton1"
                    android:text="@string/question3_answer" />

            </RadioGroup>

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/question_element"
                style="@style/Question.number"
                android:text="@string/four" />

            <TextView
                android:id="@+id/question4_body"
                style="@style/Question"
                android:layout_toEndOf="@id/question_element"
                android:layout_toRightOf="@id/question_element"
                android:text="@string/question4_body" />

            <RadioGroup
                android:id="@+id/radio_group_element"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_element"
                android:layout_toEndOf="@id/question_element"
                android:layout_toRightOf="@id/question_element"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question4_answer"
                    style="@style/RadioButton3"
                    android:text="@string/question4_answer" />

                <RadioButton
                    android:id="@+id/question4_false1"
                    style="@style/RadioButton1"
                    android:text="@string/question4_false1" />

                <RadioButton
                    android:id="@+id/question4_false2"
                    style="@style/RadioButton1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question4_false2" />

                <RadioButton
                    android:id="@+id/question4_false3"
                    style="@style/RadioButton1"
                    android:text="@string/question4_false3" />

            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/question_abilities"
                style="@style/Question.number"
                android:text="@string/five" />

            <TextView
                android:id="@+id/question5_body"
                style="@style/Question"
                android:layout_toEndOf="@id/question_abilities"
                android:layout_toRightOf="@id/question_abilities"
                android:text="@string/question5_body" />

            <RadioGroup
                android:id="@+id/radio_group_abilities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_abilities"
                android:layout_toEndOf="@id/question_abilities"
                android:layout_toRightOf="@id/question_abilities"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question5_false1"
                    style="@style/RadioButton4"
                    android:text="@string/question5_false1" />

                <RadioButton
                    android:id="@+id/question5_answer"
                    style="@style/RadioButton1"
                    android:text="@string/question5_answer" />

                <RadioButton
                    android:id="@+id/question5_false2"
                    style="@style/RadioButton1"
                    android:text="@string/question5_false2" />

                <RadioButton
                    android:id="@+id/question5_false3"
                    style="@style/RadioButton1"
                    android:text="@string/question5_false3" />

            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/question_which_id"
                style="@style/Question.number"
                android:text="@string/six" />

            <TextView
                android:id="@+id/question6_body"
                style="@style/Question"
                android:layout_toEndOf="@id/question_which_id"
                android:layout_toRightOf="@id/question_which_id"
                android:text="@string/question6_body" />


            <RadioGroup
                android:id="@+id/radio_group_which"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_which_id"
                android:layout_toEndOf="@id/question_which_id"
                android:layout_toRightOf="@id/question_which_id"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question6_false3"
                    style="@style/RadioButton2"
                    android:text="@string/question6_false3" />

                <RadioButton
                    android:id="@+id/question6_answer"
                    style="@style/RadioButton1"
                    android:text="@string/question6_answer" />

                <RadioButton
                    android:id="@+id/question6_false1"
                    style="@style/RadioButton1"
                    android:text="@string/question6_false1" />

                <RadioButton
                    android:id="@+id/question1_false2"
                    style="@style/RadioButton1"
                    android:text="@string/question6_false2" />

            </RadioGroup>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/question_entrance"
                style="@style/Question.number"
                android:text="@string/seven" />

            <TextView
                android:id="@+id/question7_body"
                style="@style/Question"
                android:layout_toEndOf="@id/question_entrance"
                android:layout_toRightOf="@id/question_entrance"
                android:text="@string/question7_body" />

            <RadioGroup
                android:id="@+id/radio_group_entrance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_entrance"
                android:layout_toEndOf="@id/question_entrance"
                android:layout_toRightOf="@id/question_entrance"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question7_false1"
                    style="@style/RadioButton3"
                    android:text="@string/question7_false1" />

                <RadioButton
                    android:id="@+id/question7_answer"
                    style="@style/RadioButton1"
                    android:text="@string/question7_answer" />

                <RadioButton
                    android:id="@+id/question7_false2"
                    style="@style/RadioButton1"
                    android:text="@string/question7_false2" />

                <RadioButton
                    android:id="@+id/question7_false3"
                    style="@style/RadioButton1"
                    android:text="@string/question7_false3" />


            </RadioGroup>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">

            <TextView
                android:id="@+id/question_ignatia"
                style="@style/Question.number"
                android:text="@string/eight" />

            <TextView
                android:id="@+id/question8_body"
                style="@style/Question"
                android:layout_toEndOf="@id/question_ignatia"
                android:layout_toRightOf="@id/question_ignatia"
                android:text="@string/question8_body" />

            <RadioGroup
                android:id="@+id/radio_group_ignatia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/question_ignatia"
                android:layout_toEndOf="@id/question_ignatia"
                android:layout_toRightOf="@id/question_ignatia"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/question8_answer"
                    style="@style/RadioButton2"
                    android:text="@string/question8_answer" />

                <RadioButton
                    android:id="@+id/question8_false1"
                    style="@style/RadioButton1"
                    android:text="@string/question8_false1" />

                <RadioButton
                    android:id="@+id/question8_false2"
                    style="@style/RadioButton1"
                    android:text="@string/question8_false2" />

                <RadioButton
                    android:id="@+id/question8_false3"
                    style="@style/RadioButton1"
                    android:text="@string/question8_false3" />


            </RadioGroup>


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp">


            <TextView
                android:id="@+id/question_check_the_correct"
                style="@style/Question.number"
                android:text="@string/nine" />

            <TextView
                android:id="@+id/question9_body"
                style="@style/Question"
                android:layout_toEndOf="@id/question_check_the_correct"
                android:layout_toRightOf="@id/question_check_the_correct"
                android:text="@string/question9_body" />

            <CheckBox
                android:id="@+id/question9_correct"
                style="@style/CheckBox"
                android:layout_below="@id/question_check_the_correct"
                android:text="@string/question9_correct" />

            <CheckBox
                android:id="@+id/question9_false"
                style="@style/CheckBox"
                android:layout_below="@id/question9_correct"
                android:text="@string/question9_false" />

            <CheckBox
                android:id="@+id/question9_answer"
                style="@style/CheckBox"
                android:layout_below="@id/question9_false"
                android:text="@string/question9_answer" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp">

            <Button
                android:id="@+id/score"
                style="@style/Buttons"
                android:layout_alignParentLeft="true"
                android:onClick="showScore"
                android:text="@string/score" />

            <Button
                android:id="@+id/restart"
                style="@style/Buttons"
                android:layout_alignParentRight="true"
                android:onClick="Reset"
                android:text="@string/restart" />


        </RelativeLayout>


    </LinearLayout>

</ScrollView>

